[stretch] added contact link and fixed bugs

--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,12 @@ p {
 
 .logo {
     display: flex;
-    margin: 0 0 20px 0;
+    margin: 10px 0 20px 0;
+}
+
+.lambda {
+    display: flex;
+    margin: 10px 0 0px 0;
 }
 
 .main-nav {
@@ -278,7 +283,7 @@ box-shadow: 0px 0px 2px 3px black;
 
 } 
 
-a:hover {
+.main-nav a:hover {
     box-shadow: 0px 0px 2px 3px black;
     border-radius: 5px;
     padding: 1px;
